--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: rgba(7, 56, 112, 0.685);
+}
+ .text-underline{
+    text-decoration: underline;
+ }
